tests/errors/parser-errors/atblock/at_block_nothing_after_colon.smark
@_tag_@:;
body
@_end_@
